--- a/src/components/blocks/header.scss
+++ b/src/components/blocks/header.scss
@@ -1,4 +1,6 @@
 .header {
+    background-color: red;
+    background-color: blue;
   width: 100%;
   transition: background-color var(--bs-transition);
   z-index: 50;
