Fix : liked-goods

--- a/src/components/blocks/header/_header.html
+++ b/src/components/blocks/header/_header.html
@@ -1,13 +1,13 @@
 <header class="header">
-    <!-- @@include('./top/_top.html') -->
+    @@include('./top/_top.html')
     <div class="header__sud container">
-        <!-- @@include('./logo/_logo.html') --> 
-        <!-- @@include('./search/_search.html') -->
-        <!-- @@include('./order/_order.html') -->
-        <!-- @@include('./liked-goods/_liked-goods.html') -->
-        <!-- @@include('./compare/_compare.html') -->
-        <!-- @@include('./basket/_basket.html') -->
+        @@include('./logo/_logo.html') 
+        @@include('./search/_search.html')
+        @@include('./order/_order.html')
+        @@include('./liked-goods/_liked-goods.html')
+        @@include('./compare/_compare.html')
+        @@include('./basket/_basket.html')
     </div>
-    <!-- @@include('./nav-product/_nav-product.html') -->
-    <!-- @@include('./mobile-header/mobile-header.html') -->
+    @@include('./nav-product/_nav-product.html')
+    @@include('./mobile-header/mobile-header.html')
 </header>
