--- a/src/components/blocks/_import-blocks.scss
+++ b/src/components/blocks/_import-blocks.scss
@@ -1,2 +1,7 @@
 // blocks import
+@import './elements/_elements.scss';
 @import './header/_header.scss';
+@import './main/_main.scss';
+@import './footer/_footer.scss';
+@import './catalog/_catalog.scss';
+@import './stab/_stab.scss';
