--- a/src/components/blocks/header/top/_top.html
+++ b/src/components/blocks/header/top/_top.html
@@ -21,7 +21,7 @@
                 </li>
                 <!-- /menu -->
                 <li><a class="top__ref ref" href="./catalog.html">Product catalog</a></li>
-                <li><a class="top__ref ref" href="stab.html">Payment and delivery</a></li>
+                <li><a class="top__ref ref" href="#">Payment and delivery</a></li>
                 <li><a class="top__ref ref" href="#">Partners</a></li>
                 <li><a class="top__ref ref" href="#">News</a></li>
                 <li><a class="top__ref ref" href="#">Contacts</a></li>
