--- a/src/components/blocks/_import-blocks.scss
+++ b/src/components/blocks/_import-blocks.scss
@@ -3,5 +3,5 @@
 @import './header/_header.scss';
 @import './main/_main.scss';
 @import './footer/_footer.scss';
-@import './catalog/_catalog.scss';
-@import './stab/_stab.scss';
+// @import './catalog/_catalog.scss';
+// @import './stab/_stab.scss';
