--- a/src/components/blocks/elements/ref/_ref.scss
+++ b/src/components/blocks/elements/ref/_ref.scss
@@ -11,10 +11,12 @@
 @media (max-width: 1034px) {
 
     .ref {
+        font-size: 0.9rem;
     }
 }
 @media (max-width: 992px) {
     .ref{ 
+        font-size: 1.1rem;
         font-weight: 300;
     }
 
