--- a/src/components/blocks/main/_main.html
+++ b/src/components/blocks/main/_main.html
@@ -1,8 +1,8 @@
 <main>
-    <!-- @@include('./banner/_banner.html') --> 
-    <!-- @@include('./about-us/_about-us.html') -->
+    @@include('./banner/_banner.html') 
+    @@include('./about-us/_about-us.html')
     @@include('./novelties/_novelties.html') 
-    <!-- @@include('./stock/_stock.html') -->
-    <!-- @@include('./partners/_partners.html') -->
-    <!-- @@include('./seeds/_seeds.html') -->
+    @@include('./stock/_stock.html')
+    @@include('./partners/_partners.html')
+    @@include('./seeds/_seeds.html')
 </main>
