--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,90 +1,87 @@
 :root {
-  font-size: clamp(0.81rem, 1.2vw, 1rem);
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 html {
-  width: 100%;
-  height: 100%;
-  scroll-behavior: smooth;
-  overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
-  position: relative;
-  display: grid;
-  grid-template-rows: 1fr max-content;
-  min-height: 100%;
-}
+    position: relative;
+    width: 100%;
+    height: 100%;
 
+}
 .contenet {
-  max-width: 1110px;
+    max-width: 1110px;
 }
 
 a {
-  text-decoration: none;
-  transition: all 0.3s;
-  &:hover {
-  }
+    text-decoration: none;
+    transition: all 0.3s;
+    &:hover {
+    }
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 img {
-  width: 100%;
-  height: auto;
-  pointer-events: none;
+    width: 100%;
+    height: auto;
+    pointer-events: none;
 }
 
 .page-body {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 .viseble {
-  display: block;
+    display: block;
 }
 
 // ===  container  ===
 
 .container {
-  margin: 0 auto;
-  padding: 0 80px;
-  width: 100%;
-  max-width: 1270px;
-  overflow: hidden;
+    margin: 0 auto;
+    padding: 0 80px;
+    width: 100%;
+    max-width: 1270px;
+    overflow: hidden;
 }
 
 .container-big {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1920px;
-  overflow: hidden;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1920px;
+    overflow: hidden;
 }
 
 .container-slider {
-  margin: 0 auto;
-  padding: 0 50px;
-  width: 100%;
-  max-width: 1270px;
+    margin: 0 auto;
+    padding: 0 50px;
+    width: 100%;
+    max-width: 1270px;
 }
-.p {
-  padding-top: 200px;
-}
-
 @media (max-width: 1440px) {
 }
 
@@ -92,33 +89,30 @@ img {
 }
 
 @media (max-width: 992px) {
-    :root {
-        font-size: 1rem;
+    .container {
+        padding: 0 20px;
     }
-  .container {
-    padding: 0 20px;
-  }
-  .container-slider {
-    padding: 0;
-  }
+    .container-slider {
+        padding: 0 ;
+    }
 }
 
 @media (max-width: 768px) {
-  .container {
-    padding: 0 10px;
-  }
-  .container-slider {
-    padding: 0;
-  }
+    .container {
+        padding: 0 10px;
+    }
+    .container-slider {
+        padding: 0 ;
+    }
 }
 
 @media (max-width: 425px) {
-  .container {
-    padding: 0 10px;
-  }
-  .container-slider {
-    padding: 0;
-  }
+    .container {
+        padding: 0 10px;
+    }
+    .container-slider {
+        padding: 0 ;
+    }
 }
 
 @media (max-width: 375px) {
